<resources>
    <string name="app_name">WishList</string>
    <string name="news">News</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="pseudo">Pseudo</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="sign_up_instead"><u>Sign Up instead</u></string>
    <string name="sign_in_instead"><u>Sign In instead</u></string>
    <string name="profile_picture_description_for_blind">Profile picture</string>
    <string name="pass_error_dont_match">Passwords don\'t matches</string>
    <string name="mail_exist">Email address already used</string>
    <string name="pass_length_error">Password must be at least 8 characters length</string>
    <string name="not_register_error">Mail is not yet register, signUp instead</string>
    <string name="pass_error">Password and mail don\'t match</string>
    <string name="pseudo_error">Pseudo must be at least 6 characters length</string>
    <string name="list_wishlist">List of your WhisList</string>
    <string name="wishlist_title">WishList default Title</string>
    <string name="wishlist_default_price">price : 0$</string>
    <string name="wishlist_size">Wish In : 0</string>
    <string name="image_wishlist_desc">WishList picture</string>
    <string name="desc_background">background of the widget</string>
    <string name="wish_in_format">Wish In : %d</string>
    <string name="create_wishlist_button">Create New WishList</string>
    <string name="wishlist_name">WishList Name</string>
    <string name="wish_title">Name</string>
    <string name="wish_price">price: 0€</string>
    <string name="add_wish">Add Wish</string>
    <string name="price">Price</string>
    <string name="wish_name">Wish Name</string>
    <string name="description">Description</string>
    <string name="market_address">Market Address</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="logout">X</string>
    <string name="space">\t\t:\t\t</string>
    <string name="modify_profile">Modify profile</string>
    <string name="friend_list">Friends list</string>
    <string name="logout_txt">Logout</string>
    <string name="profile">Profile</string>
    <string name="param">Parameters</string>
    <string name="menu">| | |</string>
    <string name="blind_menu">Menu on the right side</string>
    <string name="menu_bg">menu background</string>
    <string name="add_friend">Add Friend</string>
    <string name="search_friend">Search Friend</string>
    <string name="friend_pseudo">Enter friend\'s pseudo or mail</string>
    <string name="add_friends">addadadd</string>
    <string name="user_name">User name</string>
    <string name="wishlist_nbr">Has %s WishList</string>
    <string name="mail_test">mailtest@mail.test.be</string>
    <string name="x">X</string>
    <string name="delete_friend">Delete friend</string>
    <string name="pending">Pending invite</string>
    <string name="accept">V</string>
    <string name="market">Market</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="modify">Modify</string>
    <string name="no_market">No market filled</string>
    <string name="no_desc">No description filled</string>
    <string name="blind_delete">Button delete</string>
    <string name="search_wish">Search Wish</string>
    <string name="btn">button</string>
    <string name="edit_btn">Edit WishList</string>
    <string name="new_name">New name</string>
    <string name="delete_wishlist">Delete Wishlist</string>
    <string name="save_change">Save change</string>
    <string name="change_picture">Change picture</string>
    <string name="sure_delete">Are you sure to delete this wishlist :</string>
    <string name="sure">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_wish">Add new wish</string>
    <string name="address">Address</string>
    <string name="save_info">Save info</string>
    <string name="your_address">Your address</string>
    <string name="favorite_color">Favorites color</string>
    <string name="favorite_meal">Favorite meal</string>
    <string name="sport">Sport</string>
    <string name="hobby">hobby</string>
    <string name="work">Work</string>
    <string name="hint_search_wish">Enter Wish\'s name</string>
    <string name="pass">pass this step</string>
    <string name="blind_picture">Profile picture round in middle of the popup</string>
    <string name="delete_wish">Delete wish</string>
    <string name="conf_del_wish">Are you sure to delete this wish?</string>
    <string name="manage_perm">Edit Permission</string>
    <string name="add_read_perm">Hide for</string>
    <string name="add_write_perm">Can Write</string>
    <string name="del_perm">Delete perm</string>
    <string name="add_perm">Add a permission to a friend</string>
    <string name="add_perm2">Add permission</string>
    <string name="user1">hadrien@gmail.com</string>
    <string name="user2">nicolas@gmail.com</string>
    <string name="user3">julien@gmail.com</string>
    <string name="user4">noemie@gmail.com</string>
    <string name="user5">francois@gmail.com</string>
    <string name="user6">shaparder@gmail.com</string>
    <string name="user7">stanley@gmail.com</string>
    <string name="user8">alexandre@gmail.com</string>
    <string name="change_password">Change password</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="new_pass_conf">Confirmation</string>
</resources>
