<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_background"
        android:src="@drawable/wishlist_background"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/wishlist_picture"
            android:contentDescription="@string/image_wishlist_desc"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src = "@drawable/picture_gift"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/Black"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:id ="@+id/wishlist_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/LightGray"
                android:text="@string/wishlist_name"
                android:fontFamily="cursive"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/wishlist_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wishlist_title"
                android:layout_marginTop="5dp"
                android:textColor="@color/LightGray"
                android:text="@string/wishlist_size"
                android:fontFamily="cursive"
                android:textSize="15sp"
                />
        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/modify_btn"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginStart="230dp"
        android:background="@color/LightBlue_alpha"
        android:text="@string/menu"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginStart="300dp"
        android:background="@drawable/rounded_btn"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/blind_delete"
        android:layout_marginStart="310dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/delete_icon"/>

</RelativeLayout>
