<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:background="@color/Gray">

    <TextView
        android:id="@+id/quit_popup"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="@string/x"
        android:textAlignment="center"
        android:layout_marginStart="270dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round"
        android:layout_marginEnd="10dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/friend_picture_popup"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:src="@drawable/picture_gift"
        />

    <TextView
        android:id="@+id/name_popup"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/name_in_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_name"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/change_picture"
        android:fontFamily="cursive"
        android:textSize="12sp"
        android:background="@drawable/tp_bg_btn"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/modify_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/save_change"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:background="@color/Blue"
            android:fontFamily="cursive"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/delete_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/delete_wishlist"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:background="@color/Red_alpha"
            android:fontFamily="cursive"
            android:textStyle="bold"
            />

    </LinearLayout>




</LinearLayout>