<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/Gray">

    <TextView
        android:id="@+id/quit_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/round"
        android:text="@string/x"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="270dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/picture_popup"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/no_picture"/>

    <TextView
        android:id="@+id/name_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/White"/>

    <TextView
        android:id="@+id/mail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_test"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/White"/>

    <TextView
        android:id="@+id/wishlist_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wishlist_nbr"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/White"/>

    <LinearLayout
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/read_btn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/Blue_alpha"
            android:text="@string/add_read_perm"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:fontFamily="cursive"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/write_btn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/Green_alpha"
            android:text="@string/add_write_perm"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:fontFamily="cursive"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>