<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    tools:context="be.uclouvain.lsinf1225.groupel31.wishlist.views.WishActivity">
    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="60sp"
            android:fontFamily="cursive"
            android:textColor="@color/LightGray"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picture_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/no_picture"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/Black"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/menu"
        android:translationZ="10dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginStart="400dp">
        <ImageView
            android:id="@+id/wish_picture"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:contentDescription="@string/blind_menu"
            android:layout_marginStart="200dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/menu_background"/>

        <Button
            android:id="@+id/profile"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:background="@drawable/simple_button"
            android:text="@string/profile"
            android:fontFamily="cursive"
            android:layout_marginTop="150dp"
            android:layout_marginStart="235dp"/>

        <Button
            android:id="@+id/wishlist"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:background="@drawable/simple_button"
            android:text="@string/app_name"
            android:fontFamily="cursive"
            android:layout_marginTop="20dp"
            android:layout_below="@id/profile"
            android:layout_marginStart="235dp"
            />

        <Button
            android:id="@+id/friend_list"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:background="@drawable/simple_button"
            android:text="@string/friend_list"
            android:fontFamily="cursive"
            android:layout_marginTop="20dp"
            android:layout_below="@id/wishlist"
            android:layout_marginStart="235dp"/>

        <Button
            android:id="@+id/param"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:background="@drawable/simple_button"
            android:text="@string/param"
            android:fontFamily="cursive"
            android:layout_marginTop="20dp"
            android:layout_below="@id/friend_list"
            android:layout_marginStart="235dp"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:background="@drawable/simple_button"
            android:text="@string/logout_txt"
            android:fontFamily="cursive"
            android:layout_marginTop="20dp"
            android:layout_below="@id/param"
            android:layout_marginStart="235dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:layout_marginStart="50dp"
        android:text="@string/wish_title"
        android:fontFamily="cursive"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/LightGray"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/page_title"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pict_wish"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@drawable/picture_gift"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_marginTop="50dp"
                android:fontFamily="cursive"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market"
                android:layout_marginTop="50dp"
                android:fontFamily="cursive"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="40dp">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_marginTop="50dp"
                android:fontFamily="cursive"/>

            <TextView
                android:id="@+id/market"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market"
                android:layout_marginTop="50dp"
                android:fontFamily="cursive"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_marginStart="50dp"
        android:text="@string/description"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/LightGray"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/descriptor"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="65dp"
        android:text="@string/lorem"
        android:fontFamily="cursive"/>

    <Button
        android:id="@+id/modify_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_button"
        android:layout_below="@id/description"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="110dp"
        android:text="@string/modify"
        android:fontFamily="cursive"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:textStyle="bold"
        />
</RelativeLayout>
