<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_background"
    android:gravity="center"
    tools:context="be.uclouvain.lsinf1225.groupel31.wishlist.Views.SignIn">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:fontFamily="cursive"
        android:textColor="@color/LightGray"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/mail_in"
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="30dp"
        android:hint="@string/mail"
        android:fontFamily="cursive"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColorHint="@color/LightGray"
        android:textColor="@color/DarkGray"
        android:background="@color/White"
        android:layout_marginTop="25dp"
        tools:ignore="AutoFill,TextFields"
        />

    <EditText
        android:id="@+id/pass_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="40dp"
        android:inputType="textWebPassword"
        android:hint="@string/password"
        android:fontFamily="cursive"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColorHint="@color/LightGray"
        android:textColor="@color/DarkGray"
        android:background="@color/White"
        android:layout_marginTop="25dp"
        tools:ignore="Autofill"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height = "0dp"
        android:id = "@+id/not_register_error"
        />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_button"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:fontFamily="cursive"
        />

    <TextView
        android:id="@+id/go_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_instead"
        android:textColor="@color/LightBlue"
        android:linksClickable="true"
        android:gravity="end"
        android:layout_marginTop="30dp"
        />

</LinearLayout>