<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_background"
    tools:context=".LogInUp"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/LightGray"
        android:textSize="60sp"
        android:gravity="center"
        android:fontFamily="cursive"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_button"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sign_up"
        android:fontFamily="cursive"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_button"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_in"
        android:fontFamily="cursive"
        android:textSize="20sp"
        />


</LinearLayout>